--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 								<div class="description padding-trailer--large tabletp-padding-trailer--none">
 									<strong class="text-size--13">DISCOVER THE NEW</strong>
 									<h2 class="text-size--44 tabletl-text-size--34  tabletp-text-size--44 mobile-text-size--19 text-light trailer--small mobile-trailer--none">Beats Solo2 Wireless <br/>On-Ear Headphones</h2>
-									<p class="trailer--small text-size--16 mobile-hidden">Unplug your Beats Solo2 Wireless headphones, pair with your iPhone, <br/>iPad, and move freely for up to 30 feet of wireless listening.</p>
-									<p class="text-size--13">BEFORE <span class="old-price">4.800 KR.</span></p>
-									<p class="trailer--small text-size--48 tabletp-text-size--38 mobile-text-size--24 text-light color-blue">4.499,-</p>
+									<p class="trailer--small text-size--16 tabletp-hidden">Unplug your Beats Solo2 Wireless headphones, pair with your iPhone, <br/>iPad, and move freely for up to 30 feet of wireless listening.</p>
+									<p class="text-size--13 mobile-hidden">BEFORE <span class="old-price">4.800 <span class="price-currency">KR.</span></span></p>
+									<p class="trailer--small text-size--48 tabletp-text-size--38 mobile-text-size--24 text-light color-blue">4.499 <span class="price-currency">KR.</span> <span class="text-size--19 tabletp-text-size--11 color-gray text-regular">/MD.</span></p>
 									<button class="button button--action tablet-hidden">Buy now</button>
 								</div>
 								<p class="text-size--11 color-steel-grey text-legal">Free delivery <br/>Order before 16 o’clock and get tomorrow</p>
@@ -67,9 +67,9 @@
 								<div class="description padding-trailer--large tabletp-padding-trailer--none">
 									<strong class="text-size--13">DISCOVER THE NEW</strong>
 									<h2 class="text-size--44 tabletl-text-size--34  tabletp-text-size--44 mobile-text-size--19 text-light trailer--small mobile-trailer--none">Beats Solo2 Wireless <br/>On-Ear Headphones</h2>
-									<p class="trailer--small text-size--16 mobile-hidden">Unplug your Beats Solo2 Wireless headphones, pair with your iPhone, <br/>iPad, and move freely for up to 30 feet of wireless listening.</p>
-									<p class="text-size--13">BEFORE <span class="old-price">4.800 KR.</span></p>
-									<p class="trailer--small text-size--48 tabletp-text-size--38 mobile-text-size--24 text-light color-blue">4.499,-</p>
+									<p class="trailer--small text-size--16 tabletp-hidden">Unplug your Beats Solo2 Wireless headphones, pair with your iPhone, <br/>iPad, and move freely for up to 30 feet of wireless listening.</p>
+									<p class="text-size--13 mobile-hidden">BEFORE <span class="old-price">4.800 <span class="price-currency">KR.</span></span></p>
+									<p class="trailer--small text-size--48 tabletp-text-size--38 mobile-text-size--24 text-light color-blue">4.499 <span class="price-currency">KR.</span> <span class="text-size--19 tabletp-text-size--11 color-gray text-regular">/MD.</span></p>
 									<button class="button button--action tablet-hidden">Buy now</button>
 								</div>
 								<p class="text-size--11 color-steel-grey text-legal">Free delivery <br/>Order before 16 o’clock and get tomorrow</p>
@@ -88,9 +88,9 @@
 								<div class="description padding-trailer--large tabletp-padding-trailer--none">
 									<strong class="text-size--13">DISCOVER THE NEW</strong>
 									<h2 class="text-size--44 tabletl-text-size--34  tabletp-text-size--44 mobile-text-size--19 text-light trailer--small mobile-trailer--none">Beats Solo2 Wireless <br/>On-Ear Headphones</h2>
-									<p class="trailer--small text-size--16 mobile-hidden">Unplug your Beats Solo2 Wireless headphones, pair with your iPhone, <br/>iPad, and move freely for up to 30 feet of wireless listening.</p>
-									<p class="text-size--13">BEFORE <span class="old-price">4.800 KR.</span></p>
-									<p class="trailer--small text-size--48 tabletp-text-size--38 mobile-text-size--24 text-light color-blue">4.499,-</p>
+									<p class="trailer--small text-size--16 tabletp-hidden">Unplug your Beats Solo2 Wireless headphones, pair with your iPhone, <br/>iPad, and move freely for up to 30 feet of wireless listening.</p>
+									<p class="text-size--13 mobile-hidden">BEFORE <span class="old-price">4.800 <span class="price-currency">KR.</span></span></p>
+									<p class="trailer--small text-size--48 tabletp-text-size--38 mobile-text-size--24 text-light color-blue">4.499 <span class="price-currency">KR.</span> <span class="text-size--19 tabletp-text-size--11 color-gray text-regular">/MD.</span></p>
 									<button class="button button--action tablet-hidden">Buy now</button>
 								</div>
 								<p class="text-size--11 color-steel-grey text-legal">Free delivery <br/>Order before 16 o’clock and get tomorrow</p>
@@ -109,9 +109,9 @@
 								<div class="description padding-trailer--large tabletp-padding-trailer--none">
 									<strong class="text-size--13">DISCOVER THE NEW</strong>
 									<h2 class="text-size--44 tabletl-text-size--34  tabletp-text-size--44 mobile-text-size--19 text-light trailer--small mobile-trailer--none">Beats Solo2 Wireless <br/>On-Ear Headphones</h2>
-									<p class="trailer--small text-size--16 mobile-hidden">Unplug your Beats Solo2 Wireless headphones, pair with your iPhone, <br/>iPad, and move freely for up to 30 feet of wireless listening.</p>
-									<p class="text-size--13">BEFORE <span class="old-price">4.800 KR.</span></p>
-									<p class="trailer--small text-size--48 tabletp-text-size--38 mobile-text-size--24 text-light color-blue">4.499,-</p>
+									<p class="trailer--small text-size--16 tabletp-hidden">Unplug your Beats Solo2 Wireless headphones, pair with your iPhone, <br/>iPad, and move freely for up to 30 feet of wireless listening.</p>
+									<p class="text-size--13 mobile-hidden">BEFORE <span class="old-price">4.800 <span class="price-currency">KR.</span></span></p>
+									<p class="trailer--small text-size--48 tabletp-text-size--38 mobile-text-size--24 text-light color-blue">4.499 <span class="price-currency">KR.</span> <span class="text-size--19 tabletp-text-size--11 color-gray text-regular">/MD.</span></p>
 									<button class="button button--action tablet-hidden">Buy now</button>
 								</div>
 								<p class="text-size--11 color-steel-grey text-legal">Free delivery <br/>Order before 16 o’clock and get tomorrow</p>
@@ -159,9 +159,8 @@
 					<div class="background background__tablet" style="background-image: url(cover-full-tablet.jpg)"></div>
 					<div class="background background__mobile" style="background-image: url(cover-full-mobile.jpg)"></div>
 					<div class="col-hg-6 col-lg-8 col-md-10 banner-content">
-						<div class="splash font-roboto splash--green-blue splash--large">
-							<span class="splash__heading">Save</span>
-							<span class="splash__percent">XX%</span>
+						<div class="splash splash--image">
+							<img src="splash.png" alt="splash" width="100" height="100">
 						</div>
 						<div class="icon-holder trailer--small">
 							<!-- <span class="icon icon-home-broadband circle-outline circle-outline text-size--34 tabletl-text-size--30 inline-block border-width-2"></span> -->
@@ -172,7 +171,7 @@
 						<p class="text-size--16 mobile-text-size--13 trailer--small tabletp-trailer">Unplug your Beats Solo2 Wireless headphones, pair with your iPhone, iPad, and move freely for up to 30 feet of wireless listening. </p>
 						<button class="button button--action trailer--large">Button</button>
 					</div>
-					<p class="text-size--11 banner-legal">Minimum price w. FRI+ XX GB: X.XXX <span class="price-currency">kr.</span></p>
+					<p class="text-size--11 text-legal">Minimum price w. FRI+ XX GB: X.XXX <span class="price-currency">kr.</span></p>
 				</div>
 			</div>
 		</div>
@@ -183,9 +182,8 @@
 			<div class="grid-row--gutter-none">
 				<div class="cover-holder col-xs grid-row--gutter-none grid-row-xs--middle grid-row-xs--center padding-whole--large mobile-padding-toleft mobile-padding-toright">
 					<div class="col-hg-6 col-lg-8 col-md-10 banner-content">
-						<div class="splash font-roboto splash--green-blue splash--large">
-							<span class="splash__heading">Save</span>
-							<span class="splash__percent">XX%</span>
+						<div class="splash splash--image">
+							<img src="splash.png" alt="splash" width="100" height="100">
 						</div>
 						<div class="icon-holder trailer--small">
 							<!-- <span class="icon icon-home-broadband circle-outline circle-outline text-size--34 tabletl-text-size--30 inline-block border-width-2"></span> -->
@@ -196,7 +194,7 @@
 						<p class="text-size--16 mobile-text-size--13 trailer">Unplug your Beats Solo2 Wireless headphones, pair with your iPhone, iPad, and move freely for up to 30 feet of wireless listening. </p>
 						<button class="button button--action trailer--large">Button</button>
 					</div>
-					<p class="text-size--11 banner-legal">Minimum price w. FRI+ XX GB: X.XXX <span class="price-currency">kr.</span></p>
+					<p class="text-size--11 text-legal">Minimum price w. FRI+ XX GB: X.XXX <span class="price-currency">kr.</span></p>
 				</div>
 			</div>
 		</div>
@@ -206,10 +204,9 @@
 		<div class="container">
 			<div class="grid-row--gutter-none">
 				<div class="cover-holder col-xs grid-row--gutter-none grid-row-xs--middle grid-row-lg--left grid-row-md--center padding-whole--large mobile-padding-toleft mobile-padding-toright">
-					<div class="col-hg-9 col-lg-10 col-md-10 banner-content">
-						<div class="splash font-roboto splash--green-blue splash--large">
-							<span class="splash__heading">Save</span>
-							<span class="splash__percent">XX%</span>
+					<div class="col-hg-6 col-lg-7 col-md-10 banner-content">
+						<div class="splash splash--image">
+							<img src="splash.png" alt="splash" width="100" height="100">
 						</div>
 						<div class="icon-holder trailer--small">
 							<!-- <span class="icon icon-home-broadband circle-outline circle-outline text-size--34 tabletl-text-size--30 inline-block border-width-2"></span> -->
@@ -220,7 +217,7 @@
 						<p class="text-size--16 mobile-text-size--13 trailer">Unplug your Beats Solo2 Wireless headphones, pair with your iPhone, iPad, and move freely for up to 30 feet of wireless listening. </p>
 						<button class="button button--action trailer--large">Button</button>
 					</div>
-					<p class="text-size--11 banner-legal padding-toleft--xxlarge padding-toright--xxlarge mobile-padding-toleft mobile-padding-toright">Minimum price w. FRI+ XX GB: X.XXX <span class="price-currency">kr.</span></p>
+					<p class="text-size--11 text-legal padding-toleft--large padding-toright--large mobile-padding-toleft mobile-padding-toright">Minimum price w. FRI+ XX GB: X.XXX <span class="price-currency">kr.</span></p>
 				</div>
 			</div>
 		</div>
