--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 									<strong class="text-size--13">DISCOVER THE NEW</strong>
 									<h2 class="text-size--44 tabletl-text-size--34  tabletp-text-size--44 mobile-text-size--19 text-light trailer--small mobile-trailer--none">Beats Solo2 Wireless <br/>On-Ear Headphones</h2>
 									<p class="trailer--small text-size--16 tabletp-hidden">Unplug your Beats Solo2 Wireless headphones, pair with your iPhone, <br/>iPad, and move freely for up to 30 feet of wireless listening.</p>
-									<p class="text-size--13 mobile-hidden">BEFORE <span class="old-price">4.800 <span class="price-currency">KR.</span></span></p>
+									<p class="text-size--13 mobile-hidden">BEFORE 4.800 KR.</p>
 									<p class="trailer--small text-size--48 tabletp-text-size--38 mobile-text-size--24 text-light color-blue">4.499 <span class="price-currency">KR.</span> <span class="text-size--19 tabletp-text-size--11 color-gray text-regular">/MD.</span></p>
 									<button class="button button--action tablet-hidden">Buy now</button>
 								</div>
@@ -68,7 +68,7 @@
 									<strong class="text-size--13">DISCOVER THE NEW</strong>
 									<h2 class="text-size--44 tabletl-text-size--34  tabletp-text-size--44 mobile-text-size--19 text-light trailer--small mobile-trailer--none">Beats Solo2 Wireless <br/>On-Ear Headphones</h2>
 									<p class="trailer--small text-size--16 tabletp-hidden">Unplug your Beats Solo2 Wireless headphones, pair with your iPhone, <br/>iPad, and move freely for up to 30 feet of wireless listening.</p>
-									<p class="text-size--13 mobile-hidden">BEFORE <span class="old-price">4.800 <span class="price-currency">KR.</span></span></p>
+									<p class="text-size--13 mobile-hidden">BEFORE 4.800 KR.</p>
 									<p class="trailer--small text-size--48 tabletp-text-size--38 mobile-text-size--24 text-light color-blue">4.499 <span class="price-currency">KR.</span> <span class="text-size--19 tabletp-text-size--11 color-gray text-regular">/MD.</span></p>
 									<button class="button button--action tablet-hidden">Buy now</button>
 								</div>
@@ -89,7 +89,7 @@
 									<strong class="text-size--13">DISCOVER THE NEW</strong>
 									<h2 class="text-size--44 tabletl-text-size--34  tabletp-text-size--44 mobile-text-size--19 text-light trailer--small mobile-trailer--none">Beats Solo2 Wireless <br/>On-Ear Headphones</h2>
 									<p class="trailer--small text-size--16 tabletp-hidden">Unplug your Beats Solo2 Wireless headphones, pair with your iPhone, <br/>iPad, and move freely for up to 30 feet of wireless listening.</p>
-									<p class="text-size--13 mobile-hidden">BEFORE <span class="old-price">4.800 <span class="price-currency">KR.</span></span></p>
+									<p class="text-size--13 mobile-hidden">BEFORE 4.800 KR.</p>
 									<p class="trailer--small text-size--48 tabletp-text-size--38 mobile-text-size--24 text-light color-blue">4.499 <span class="price-currency">KR.</span> <span class="text-size--19 tabletp-text-size--11 color-gray text-regular">/MD.</span></p>
 									<button class="button button--action tablet-hidden">Buy now</button>
 								</div>
@@ -110,7 +110,7 @@
 									<strong class="text-size--13">DISCOVER THE NEW</strong>
 									<h2 class="text-size--44 tabletl-text-size--34  tabletp-text-size--44 mobile-text-size--19 text-light trailer--small mobile-trailer--none">Beats Solo2 Wireless <br/>On-Ear Headphones</h2>
 									<p class="trailer--small text-size--16 tabletp-hidden">Unplug your Beats Solo2 Wireless headphones, pair with your iPhone, <br/>iPad, and move freely for up to 30 feet of wireless listening.</p>
-									<p class="text-size--13 mobile-hidden">BEFORE <span class="old-price">4.800 <span class="price-currency">KR.</span></span></p>
+									<p class="text-size--13 mobile-hidden">BEFORE 4.800 KR.</p>
 									<p class="trailer--small text-size--48 tabletp-text-size--38 mobile-text-size--24 text-light color-blue">4.499 <span class="price-currency">KR.</span> <span class="text-size--19 tabletp-text-size--11 color-gray text-regular">/MD.</span></p>
 									<button class="button button--action tablet-hidden">Buy now</button>
 								</div>
