Add video for cover

--- a/index.html
+++ b/index.html
@@ -178,6 +178,11 @@
 	</div>
 	
 	<div class="container--wide terminal-block terminal-block--cover-full terminal-block--cover-stretch trailer" style="background-image: url(cover-stretch.jpg)">
+		<div class="video-background">
+			<video autoplay loop muted>
+				<source type="video/mp4" src="https://player.vimeo.com/external/184862802.hd.mp4?s=2f40bc3e5491efdd0fd672ca0867ab206a3bdd0a&profile_id=174">
+			</video>
+		</div>
 		<div class="container">
 			<div class="grid-row--gutter-none">
 				<div class="cover-holder col-xs grid-row--gutter-none grid-row-xs--middle grid-row-xs--center padding-whole--large mobile-padding-toleft mobile-padding-toright">
