--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 									<h2 class="text-size--44 tabletl-text-size--34  tabletp-text-size--44 mobile-text-size--19 text-light trailer--small mobile-trailer--none">Beats Solo2 Wireless <br/>On-Ear Headphones</h2>
 									<p class="trailer--small text-size--16 tabletp-hidden">Unplug your Beats Solo2 Wireless headphones, pair with your iPhone, <br/>iPad, and move freely for up to 30 feet of wireless listening.</p>
 									<p class="text-size--13 mobile-hidden">BEFORE 4.800 KR.</p>
-									<p class="trailer--small text-size--48 tabletp-text-size--38 mobile-text-size--24 text-light color-blue">4.499 <span class="price-currency">KR.</span> <span class="text-size--19 tabletp-text-size--11 color-gray text-regular">/MD.</span></p>
+									<p class="trailer--small text-size--38 tabletp-text-size--38 mobile-text-size--24 text-light color-blue">4.499 <span class="price-currency">KR.</span> <span class="text-size--19 tabletp-text-size--11 color-gray text-regular">/MD.</span></p>
 									<button class="button button--action tablet-hidden">Buy now</button>
 								</div>
 								<p class="text-size--11 color-steel-grey text-legal">Free delivery <br/>Order before 16 o’clock and get tomorrow</p>
@@ -69,7 +69,7 @@
 									<h2 class="text-size--44 tabletl-text-size--34  tabletp-text-size--44 mobile-text-size--19 text-light trailer--small mobile-trailer--none">Beats Solo2 Wireless <br/>On-Ear Headphones</h2>
 									<p class="trailer--small text-size--16 tabletp-hidden">Unplug your Beats Solo2 Wireless headphones, pair with your iPhone, <br/>iPad, and move freely for up to 30 feet of wireless listening.</p>
 									<p class="text-size--13 mobile-hidden">BEFORE 4.800 KR.</p>
-									<p class="trailer--small text-size--48 tabletp-text-size--38 mobile-text-size--24 text-light color-blue">4.499 <span class="price-currency">KR.</span> <span class="text-size--19 tabletp-text-size--11 color-gray text-regular">/MD.</span></p>
+									<p class="trailer--small text-size--38 tabletp-text-size--38 mobile-text-size--24 text-light color-blue">4.499 <span class="price-currency">KR.</span> <span class="text-size--19 tabletp-text-size--11 color-gray text-regular">/MD.</span></p>
 									<button class="button button--action tablet-hidden">Buy now</button>
 								</div>
 								<p class="text-size--11 color-steel-grey text-legal">Free delivery <br/>Order before 16 o’clock and get tomorrow</p>
@@ -90,7 +90,7 @@
 									<h2 class="text-size--44 tabletl-text-size--34  tabletp-text-size--44 mobile-text-size--19 text-light trailer--small mobile-trailer--none">Beats Solo2 Wireless <br/>On-Ear Headphones</h2>
 									<p class="trailer--small text-size--16 tabletp-hidden">Unplug your Beats Solo2 Wireless headphones, pair with your iPhone, <br/>iPad, and move freely for up to 30 feet of wireless listening.</p>
 									<p class="text-size--13 mobile-hidden">BEFORE 4.800 KR.</p>
-									<p class="trailer--small text-size--48 tabletp-text-size--38 mobile-text-size--24 text-light color-blue">4.499 <span class="price-currency">KR.</span> <span class="text-size--19 tabletp-text-size--11 color-gray text-regular">/MD.</span></p>
+									<p class="trailer--small text-size--38 tabletp-text-size--38 mobile-text-size--24 text-light color-blue">4.499 <span class="price-currency">KR.</span> <span class="text-size--19 tabletp-text-size--11 color-gray text-regular">/MD.</span></p>
 									<button class="button button--action tablet-hidden">Buy now</button>
 								</div>
 								<p class="text-size--11 color-steel-grey text-legal">Free delivery <br/>Order before 16 o’clock and get tomorrow</p>
@@ -111,7 +111,7 @@
 									<h2 class="text-size--44 tabletl-text-size--34  tabletp-text-size--44 mobile-text-size--19 text-light trailer--small mobile-trailer--none">Beats Solo2 Wireless <br/>On-Ear Headphones</h2>
 									<p class="trailer--small text-size--16 tabletp-hidden">Unplug your Beats Solo2 Wireless headphones, pair with your iPhone, <br/>iPad, and move freely for up to 30 feet of wireless listening.</p>
 									<p class="text-size--13 mobile-hidden">BEFORE 4.800 KR.</p>
-									<p class="trailer--small text-size--48 tabletp-text-size--38 mobile-text-size--24 text-light color-blue">4.499 <span class="price-currency">KR.</span> <span class="text-size--19 tabletp-text-size--11 color-gray text-regular">/MD.</span></p>
+									<p class="trailer--small text-size--38 tabletp-text-size--38 mobile-text-size--24 text-light color-blue">4.499 <span class="price-currency">KR.</span> <span class="text-size--19 tabletp-text-size--11 color-gray text-regular">/MD.</span></p>
 									<button class="button button--action tablet-hidden">Buy now</button>
 								</div>
 								<p class="text-size--11 color-steel-grey text-legal">Free delivery <br/>Order before 16 o’clock and get tomorrow</p>
@@ -473,7 +473,8 @@
 				</a>
 			</div>
 			<div class="col-hg-6 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
-				<a href="#" class="terminal-block terminal-block--accessories terminal-block--accessories__with-background terminal-block--accessories-tablet-medium grid-row--gutter-none" style="background: url(6-col-background-test-image.png) no-repeat;">
+				<a href="#" class="terminal-block terminal-block--accessories terminal-block--accessories__with-background terminal-block--accessories-tablet-medium grid-row--gutter-none">
+					<div class="background" style="background: url(6-col-background-test-image.png) no-repeat;"></div>
 					<div class="col-hg-5 col-xs-12 image-area mobile-order--first">
 						<div class="image-holder">
 							<img src="tablet-test-img.png" alt="">
@@ -564,7 +565,8 @@
 				</a>
 			</div>
 			<div class="col-hg-9 col-md-6 grid-row--gutter-none padding-trailer--xsmall padding-leader--xsmall">
-				<a href="#" class="terminal-block terminal-block--accessories terminal-block--accessories__with-background terminal-block--accessories-tablet-large grid-row--gutter-none" style="background: url(9-col-background-test-image.png) no-repeat;">
+				<a href="#" class="terminal-block terminal-block--accessories terminal-block--accessories__with-background terminal-block--accessories-tablet-large grid-row--gutter-none">
+					<div class="background" style="background: url(9-col-background-test-image.png) no-repeat;"></div>
 					<div class="col-hg-5 col-xs-12 bundle-content tabletl-text--center">
 						<div class="description">
 							<div class="colors-holder desktoplg-hidden">
