--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@
 						</div>
 						<div class="price-box">
 							<p class="price-before text-size--13 tablet-hidden text-regular">Only</p>
-							<p class="text-size--44 trailer--large tabletl-trailer--xlarge tabletl-text-size--19 text-light tabletl-text-regular color-blue">XXX <span class="price-currency">KR.</span> <span class="text-size--19 tabletl-text-size--11 color-gray text-regular toleft--xsmall">/MD.</span></p>
+							<p class="text-size--44 trailer--large tabletl-trailer--xlarge tabletl-text-size--19 text-light tabletl-text-regular color-blue">XXX <span class="price-currency">KR.</span> <span class="text-size--19 tabletl-text-size--11 color-gray text-regular">/MD.</span></p>
 							<p class="text-size--11 text-legal">Legal text ex. w. FRI+ XX GB: X.XXX <span class="price-currency">kr.</span></p>
 						</div>
 					</div>
@@ -502,7 +502,7 @@
 						</div>
 						<div class="price-box">
 							<p class="price-before text-size--13 tablet-hidden text-regular">Only</p>
-							<p class="text-size--44 trailer--large tabletl-trailer--xlarge tabletl-text-size--19 text-light tabletl-text-regular color-blue">XXX <span class="price-currency">KR.</span> <span class="text-size--19 tabletl-text-size--11 color-gray text-regular toleft--xsmall">/MD.</span></p>
+							<p class="text-size--44 trailer--large tabletl-trailer--xlarge tabletl-text-size--19 text-light tabletl-text-regular color-blue">XXX <span class="price-currency">KR.</span> <span class="text-size--19 tabletl-text-size--11 color-gray text-regular">/MD.</span></p>
 							<p class="text-size--11 text-legal">Legal text ex. w. FRI+ XX GB: X.XXX <span class="price-currency">kr.</span></p>
 						</div>
 					</div>
@@ -586,7 +586,7 @@
 						</div>
 						<div class="price-box">
 							<p class="price-before text-size--13 tablet-hidden text-regular">Only</p>
-							<p class="text-size--44 trailer--large tabletl-trailer--xlarge tabletl-text-size--19 text-light tabletl-text-regular color-blue">XXX <span class="price-currency">KR.</span> <span class="text-size--19 tabletl-text-size--11 color-gray text-regular toleft--xsmall">/MD.</span></p>
+							<p class="text-size--44 trailer--large tabletl-trailer--xlarge tabletl-text-size--19 text-light tabletl-text-regular color-blue">XXX <span class="price-currency">KR.</span> <span class="text-size--19 tabletl-text-size--11 color-gray text-regular">/MD.</span></p>
 							<p class="text-size--11 text-legal">Legal text ex. w. FRI+ XX GB: X.XXX <span class="price-currency">kr.</span></p>
 						</div>
 					</div>
@@ -677,7 +677,7 @@
 						</div>
 						<div class="price-box">
 							<p class="price-before text-size--13 tablet-hidden text-regular">Only</p>
-							<p class="text-size--44 trailer--large tabletl-trailer--xlarge tabletl-text-size--19 text-light tabletl-text-regular color-blue">XXX <span class="price-currency">KR.</span> <span class="text-size--19 tabletl-text-size--11 color-gray text-regular toleft--xsmall">/MD.</span></p>
+							<p class="text-size--44 trailer--large tabletl-trailer--xlarge tabletl-text-size--19 text-light tabletl-text-regular color-blue">XXX <span class="price-currency">KR.</span> <span class="text-size--19 tabletl-text-size--11 color-gray text-regular">/MD.</span></p>
 							<p class="text-size--11 text-legal">Legal text ex. w. FRI+ XX GB: X.XXX <span class="price-currency">kr.</span></p>
 						</div>
 					</div>
@@ -744,7 +744,7 @@
 						</div>
 						<div class="price-box">
 							<p class="price-before text-size--13 tablet-hidden text-regular">Only</p>
-							<p class="text-size--44 trailer--large tabletl-trailer--xlarge tabletl-text-size--19 text-light tabletl-text-regular color-blue">XXX <span class="price-currency">KR.</span> <span class="text-size--19 tabletl-text-size--11 color-gray text-regular toleft--xsmall">/MD.</span></p>
+							<p class="text-size--44 trailer--large tabletl-trailer--xlarge tabletl-text-size--19 text-light tabletl-text-regular color-blue">XXX <span class="price-currency">KR.</span> <span class="text-size--19 tabletl-text-size--11 color-gray text-regular">/MD.</span></p>
 							<p class="text-size--11 text-legal">Legal text ex. w. FRI+ XX GB: X.XXX <span class="price-currency">kr.</span></p>
 						</div>
 					</div>
@@ -837,7 +837,7 @@
 						</div>
 						<div class="price-box trailer">
 							<p class="price-before text-size--13 tablet-hidden text-regular">Only</p>
-							<p class="text-size--44 tabletl-text-size--19 text-light tabletl-text-regular color-blue">XXX <span class="price-currency">KR.</span> <span class="text-size--19 tabletl-text-size--11 color-gray text-regular toleft--xsmall">/MD.</span></p>
+							<p class="text-size--44 tabletl-text-size--19 text-light tabletl-text-regular color-blue">XXX <span class="price-currency">KR.</span> <span class="text-size--19 tabletl-text-size--11 color-gray text-regular">/MD.</span></p>
 						</div>
 					</div>
 					<p class="col-hg-6 text-size--11 text-legal"><span class="tablet-hidden display--block">Free delivery on all phones</span> Minimum price w. FRI+ XX GB: X.XXX <span class="price-currency">kr.</span></span></p>
@@ -975,7 +975,7 @@
 						</div>
 						<div class="price-box trailer">
 							<p class="price-before text-size--13 tablet-hidden text-regular">Only</p>
-							<p class="text-size--44 tabletl-text-size--19 text-light tabletl-text-regular color-blue">XXX <span class="price-currency">KR.</span> <span class="text-size--19 tabletl-text-size--11 color-gray text-regular toleft--xsmall">/MD.</span></p>
+							<p class="text-size--44 tabletl-text-size--19 text-light tabletl-text-regular color-blue">XXX <span class="price-currency">KR.</span> <span class="text-size--19 tabletl-text-size--11 color-gray text-regular">/MD.</span></p>
 						</div>
 					</div>
 					<p class="col-hg-6 text-size--11 text-legal"><span class="tablet-hidden display--block">Free delivery on all phones</span> Minimum price w. FRI+ XX GB: X.XXX <span class="price-currency">kr.</span></span></p>
