--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
 							<div class="col-lg-5 text--center image-block">
 								<img src="carousel-beoplay-image.png" alt="">
 							</div>
-							<div class="col-lg-7 tabletp-text--center padding-leader tabletp-padding-leader--none mobile-padding-trailer rel">
-								<div class="description padding-trailer--large tabletp-padding-trailer--none">
+							<div class="col-lg-5 tabletp-text--center padding-leader tabletp-padding-leader--none mobile-padding-trailer rel">
+								<div class="description padding-trailer--xxlarge tabletp-padding-trailer--none">
 									<strong class="text-size--13">DISCOVER THE NEW</strong>
 									<h2 class="text-size--44 tabletl-text-size--34  tabletp-text-size--44 mobile-text-size--19 text-light trailer--small mobile-trailer--none">Beats Solo2 Wireless <br/>On-Ear Headphones</h2>
 									<p class="trailer--small text-size--16 tabletp-hidden">Unplug your Beats Solo2 Wireless headphones, pair with your iPhone, <br/>iPad, and move freely for up to 30 feet of wireless listening.</p>
 									<p class="text-size--13 mobile-hidden">BEFORE 4.800 KR.</p>
 									<p class="trailer--small text-size--38 tabletp-text-size--38 mobile-text-size--24 text-light color-blue">4.499 <span class="price-currency">KR.</span> <span class="text-size--19 tabletp-text-size--11 color-gray text-regular">/MD.</span></p>
-									<button class="button button--action tablet-hidden">Buy now</button>
+									<button class="button button--action tablet-hidden trailer">Buy now</button>
 								</div>
 								<p class="text-size--11 color-steel-grey text-legal">Free delivery <br/>Order before 16 o’clock and get tomorrow</p>
 							</div>
@@ -63,14 +63,14 @@
 							<div class="col-lg-5 text--center image-block">
 								<img src="carousel-ipad-image.png" alt="">
 							</div>
-							<div class="col-lg-7 tabletp-text--center padding-leader tabletp-padding-leader--none mobile-padding-trailer rel">
-								<div class="description padding-trailer--large tabletp-padding-trailer--none">
+							<div class="col-lg-5 tabletp-text--center padding-leader tabletp-padding-leader--none mobile-padding-trailer rel">
+								<div class="description padding-trailer--xxlarge tabletp-padding-trailer--none">
 									<strong class="text-size--13">DISCOVER THE NEW</strong>
 									<h2 class="text-size--44 tabletl-text-size--34  tabletp-text-size--44 mobile-text-size--19 text-light trailer--small mobile-trailer--none">Beats Solo2 Wireless <br/>On-Ear Headphones</h2>
 									<p class="trailer--small text-size--16 tabletp-hidden">Unplug your Beats Solo2 Wireless headphones, pair with your iPhone, <br/>iPad, and move freely for up to 30 feet of wireless listening.</p>
 									<p class="text-size--13 mobile-hidden">BEFORE 4.800 KR.</p>
 									<p class="trailer--small text-size--38 tabletp-text-size--38 mobile-text-size--24 text-light color-blue">4.499 <span class="price-currency">KR.</span> <span class="text-size--19 tabletp-text-size--11 color-gray text-regular">/MD.</span></p>
-									<button class="button button--action tablet-hidden">Buy now</button>
+									<button class="button button--action tablet-hidden trailer">Buy now</button>
 								</div>
 								<p class="text-size--11 color-steel-grey text-legal">Free delivery <br/>Order before 16 o’clock and get tomorrow</p>
 							</div>
@@ -84,14 +84,14 @@
 							<div class="col-lg-5 text--center image-block">
 								<img src="carousel-beoplay-image.png" alt="">
 							</div>
-							<div class="col-lg-7 tabletp-text--center padding-leader tabletp-padding-leader--none mobile-padding-trailer rel">
-								<div class="description padding-trailer--large tabletp-padding-trailer--none">
+							<div class="col-lg-5 tabletp-text--center padding-leader tabletp-padding-leader--none mobile-padding-trailer rel">
+								<div class="description padding-trailer--xxlarge tabletp-padding-trailer--none">
 									<strong class="text-size--13">DISCOVER THE NEW</strong>
 									<h2 class="text-size--44 tabletl-text-size--34  tabletp-text-size--44 mobile-text-size--19 text-light trailer--small mobile-trailer--none">Beats Solo2 Wireless <br/>On-Ear Headphones</h2>
 									<p class="trailer--small text-size--16 tabletp-hidden">Unplug your Beats Solo2 Wireless headphones, pair with your iPhone, <br/>iPad, and move freely for up to 30 feet of wireless listening.</p>
 									<p class="text-size--13 mobile-hidden">BEFORE 4.800 KR.</p>
 									<p class="trailer--small text-size--38 tabletp-text-size--38 mobile-text-size--24 text-light color-blue">4.499 <span class="price-currency">KR.</span> <span class="text-size--19 tabletp-text-size--11 color-gray text-regular">/MD.</span></p>
-									<button class="button button--action tablet-hidden">Buy now</button>
+									<button class="button button--action tablet-hidden trailer">Buy now</button>
 								</div>
 								<p class="text-size--11 color-steel-grey text-legal">Free delivery <br/>Order before 16 o’clock and get tomorrow</p>
 							</div>
@@ -105,14 +105,14 @@
 							<div class="col-lg-5 text--center image-block">
 								<img src="carousel-ipad-image.png" alt="">
 							</div>
-							<div class="col-lg-7 tabletp-text--center padding-leader tabletp-padding-leader--none mobile-padding-trailer rel">
-								<div class="description padding-trailer--large tabletp-padding-trailer--none">
+							<div class="col-lg-5 tabletp-text--center padding-leader tabletp-padding-leader--none mobile-padding-trailer rel">
+								<div class="description padding-trailer--xxlarge tabletp-padding-trailer--none">
 									<strong class="text-size--13">DISCOVER THE NEW</strong>
 									<h2 class="text-size--44 tabletl-text-size--34  tabletp-text-size--44 mobile-text-size--19 text-light trailer--small mobile-trailer--none">Beats Solo2 Wireless <br/>On-Ear Headphones</h2>
 									<p class="trailer--small text-size--16 tabletp-hidden">Unplug your Beats Solo2 Wireless headphones, pair with your iPhone, <br/>iPad, and move freely for up to 30 feet of wireless listening.</p>
 									<p class="text-size--13 mobile-hidden">BEFORE 4.800 KR.</p>
 									<p class="trailer--small text-size--38 tabletp-text-size--38 mobile-text-size--24 text-light color-blue">4.499 <span class="price-currency">KR.</span> <span class="text-size--19 tabletp-text-size--11 color-gray text-regular">/MD.</span></p>
-									<button class="button button--action tablet-hidden">Buy now</button>
+									<button class="button button--action tablet-hidden trailer">Buy now</button>
 								</div>
 								<p class="text-size--11 color-steel-grey text-legal">Free delivery <br/>Order before 16 o’clock and get tomorrow</p>
 							</div>
